add some new file

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,16 @@
 <body>
 	<h1>This is my place!</h1>
 	<hr>
+
+	{% with messages = get_flashed_messages() %}
+	{% if messages %}
+	<ul>
+	{% for message in messages %}
+		<li>{{ message }}</li>
+	{% endfor %}
+	</ul>
+	{% endif %}
+	{% endwith %}
 	
 	{% block content %}{% endblock %}	
 	
